# Call-Center-Agents

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/agents/: __init__.py  base.py  orchestrator.py  prompts.py  router.py  sales.py  supervisor.py  tech_support.py
app/api/v1/: dialogue.py  health.py  router.py
app/core/: __init__.py  config.py  exceptions.py  models.py
app/services/: __init__.py  dialog_manager.py  embeddings.py
