[tool.poetry]
name = "call-center-agents"
version = "0.1.0"
description = "Multi-agent система для колл-центра на базе LangGraph"
authors = ["Artem Kiryushin"]

packages = [
	{ include = "app", from = "." }
]


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
openai = "^1.6.0"
langchain-core = "^0.3.0"
langchain-openai = "^0.2.0"
langgraph = "^0.6.0"
tiktoken = "^0.7.0"
httpx = "^0.28.0"
python-json-logger = "^2.0.7"
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
isort = "^5.13.2"
ruff = "^0.1.8"
mypy = "^1.7.1"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "A", "C4", "T20", "Q", "RUF"]
ignore = [
    "B008", # Зависимости FastAPI через Depends
    "D100", # Нет докстринга в публичном модуле
    "D103", # Нет докстринга в функции main
    "D104", # Нет докстринга в публичном пакете
    "D105", # Нет докстринга в магическом методе
    "D107", # Нет докстринга в __init__
    "D203", # Одна пустая строка перед классом (конфликтует с D211)
    "D205", # Требуется одна пустая строка между сводкой и описанием
    "D210", # Пробелы не допускаются в тексте докстринга
    "D212", # Многострочный докстринг должен начинаться после определения объекта
    "D400", # В конце первой строки докстринга должна быть точка
    "D415", # В конце первой строки докстринга должна быть '.', '?', '!'
    "E501", # Превышена максимальная длина строки
    "N818", # Исключения должны заканчиваться на Error
    "RUF001", # Неоднозначный юникод-символ
    "RUF002", # Неоднозначный юникод-символ
    "RUF003", # Комментарий содержит неоднозначный символ
]
exclude = [".venv", "__pycache__", "build", "dist"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"